--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 development:
   adapter: postgresql
   database: prelaunchr_development
-  host: ng-julkampanj.herokuapp.com
+  host: localhost
 test:
   adapter: postgresql
   database: prelaunchr_test
